--- a/DesktopIntegrador/pom.xml
+++ b/DesktopIntegrador/pom.xml
@@ -40,6 +40,13 @@
             <version>5.4.0.Final</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.seaglasslookandfeel/seaglasslookandfeel -->
+        <dependency>
+            <groupId>com.seaglasslookandfeel</groupId>
+            <artifactId>seaglasslookandfeel</artifactId>
+            <version>0.2.1</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
