--- a/DesktopIntegrador/pom.xml
+++ b/DesktopIntegrador/pom.xml
@@ -29,9 +29,9 @@
             <version>SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>jasperreports</groupId>
+            <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
-            <version>3.5.3</version>
+            <version>6.7.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
