--- a/DesktopIntegrador/pom.xml
+++ b/DesktopIntegrador/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>seaglasslookandfeel</artifactId>
             <version>0.2.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.4</version>
+        </dependency>
 
     </dependencies>
     <properties>
