--- a/DesktopIntegrador/pom.xml
+++ b/DesktopIntegrador/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>LGoodDatePicker</artifactId>
             <version>10.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
